Atualizar alterações no banco

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url= jdbc:mysql://bb59652ac85578:91c82c3e@us-cdbr-east-06.cleardb.net/heroku_338806c8808b729?reconnect=true&useSSL=false
-spring.datasource.username=bb59652ac85578
-spring.datasource.password=91c82c3e
+spring.datasource.username=
+spring.datasource.password=
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.hibernate.ddl-auto=update
