--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,20 @@
-spring.datasource.url= jdbc:mysql://localhost:3306/testdb_spring?useSSL=false
-spring.datasource.username= root
-spring.datasource.password= 123456
-
-spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.MySQLDialect
-spring.jpa.hibernate.ddl-auto= update
-
-# App Properties
+# ===============================
+# = DATA SOURCE
+# ===============================
+spring.datasource.url=jdbc:mariadb://localhost:3306/sygapidb
+spring.datasource.username=root
+spring.datasource.password=mypass
+spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+# ===============================
+# = JPA / HIBERNATE
+# ===============================
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
+# Allows Hibernate to generate SQL optimized for a particular DBMS
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MariaDBDialect
+# ===============================
+# = App Properties
+# ===============================
+bezkoder.app.jwtSecret=sygGalSecretKey
+bezkoder.app.jwtExpirationMs=86400000
 bezkoder.app.jwtCookieName= bezkoder
-bezkoder.app.jwtSecret= ======================BezKoder=Spring===========================
-bezkoder.app.jwtExpirationMs= 30000
-#86400000
